# prism-datagen

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml  requirements.txt  server.py
datagen/: __init__.py  cli.py  core.py  generator.py  materialize.py  oracle.py
datagen/specs/: logistics_demo.json
demo/: README.md  build_audio.py  capture_shots.mjs  mux.py  record.mjs  scenes.json  subs.srt
docs/: PRD.md  技术文档.md  测试文档.md  用户手册.md
examples/: logistics_demo_d0.0_l4_logistics_demo.db  logistics_demo_d0.0_l4_logistics_demo.json  logistics_demo_d0.6_l4_ho-0.db  logistics_demo_d0.6_l4_ho-0.json
examples/logistics_demo_d0.0_l4_logistics_demo_csv/: news.csv  shipments.csv  throughput.csv  warehouses.csv
examples/logistics_demo_d0.6_l4_ho-0_csv/: carriers.csv  news.csv  shipments.csv  throughput.csv
tests/: test_cli.py  test_determinism.py  test_dirtiness.py  test_materialize.py  test_solvers.py  test_truth_recovery.py
web/: index.html
